Fix vertical alignment of required asterisk on forms

--- a/quark/static/css/_common.scss
+++ b/quark/static/css/_common.scss
@@ -178,9 +178,9 @@ td {
       content: '*';
       color: #f00;
       font-size: 75%;
-      vertical-align: top;
+      margin-left: 5px;
       position: absolute;
-      margin-left: 4px;
+      top: 2px;
     }
 
     &.form-entry-error {
